# xer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: x_download_bookmarks.rs  x_downloaderoptions.rs  x_get_bookmarks.rs
src/: args.rs  lib.rs  main.rs
src/cookie/: mod.rs
src/downloader/: x.rs
src/handlers/: x.rs
src/site/: x.rs
