[package]
name = "xer"
version = "0.1.3"
edition = "2024"
description = "Xer - Download twitter bookmarks"
keywords = ["cli", "x", "twitter", "twitter downloader"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.6"
reqwest = { version = "0.13", features = ["json", "cookies", "query"] }
serde = {version = "1.0.228", features = ["serde_derive"]}
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
